improve chat logic

--- a/chat-task/static/css/chat.css
+++ b/chat-task/static/css/chat.css
@@ -3,3 +3,12 @@
     background: AntiqueWhite;
     overflow: auto;
 }
+
+#submit {
+    background-color: #FF4074;
+    border-color: red;
+}
+
+#message {
+    width: calc(100% - 70px);
+}
