--- a/chat-task/templates/base.html
+++ b/chat-task/templates/base.html
@@ -13,16 +13,25 @@
     <link href="{{ app.router.static.url(filename='css/vendor/bootstrap.min.css') }}" rel="stylesheet">
     <script src="{{ app.router.static.url(filename='js/vendor/jquery-1.12.0.min.js') }}"></script>
     <script src="{{ app.router.static.url(filename='js/vendor/bootstrap.min.js') }}"></script>
+
+    <link href="{{ app.router.static.url(filename='css/chat.css') }}" rel="stylesheet">
     {% block head %}
     {% endblock %}
 </head>
 <body>
-    {% block content%}
-    {% endblock %}
+    <header class="container text-center">
+        <h1>
+            VR CHAT
+        </h1>
+    </header>
+    <div class="container">
+        {% block content%}
+        {% endblock %}
+    </div>
+
+    <footer>
+        {% block footer %}
+        {% endblock %}
+    </footer>
 </body>
-<footer>
-    <p>Property of Vitaliy Drevenchuk 2016</p>
-    {% block footer %}
-    {% endblock %}
-</footer>
 </html>
