--- a/django_shortly/app_shortly/templates/app_shortly/wrapper.html
+++ b/django_shortly/app_shortly/templates/app_shortly/wrapper.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="box">
-      <h1><a href="/shortly">shortly</a></h1>
-        <p class="tagline">Shortly is a URL shortener written with Werkzeug</p>
+      <h1><a href="/shortly">Shortly</a></h1>
+        <p class="tagline">Shortly is a URL shortener written with Django</p>
       {% block content %}{% endblock %}
     </div>
 </body>
