--- a/django_shortly/app_shortly/templates/app_shortly/urlobject_list.html
+++ b/django_shortly/app_shortly/templates/app_shortly/urlobject_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h2>Submit URL</h2>
-    <form action="/shortly/new_url" method="post">
+    <form action="/shortly/save_url" method="post">
     {%  csrf_token %}
     {% if error %}
         <p class="error"><strong>Error:</strong> {{ error }}
