--- a/session_lection/session_app/templates/session_app/login.html
+++ b/session_lection/session_app/templates/session_app/login.html
@@ -7,12 +7,13 @@
 <body>
     <form action="login" method="post">
         {% csrf_token %}
-        <p>Username:
-            <input type="text" name="username">
-        </p>
-        <p>Password:
-            <input type="text" name="password">
-        </p>
+        {{ form.as_p }}
+        <!--<p>Username:-->
+            <!--<input type="text" name="username">-->
+        <!--</p>-->
+        <!--<p>Password:-->
+            <!--<input type="text" name="password">-->
+        <!--</p>-->
         <button type="submit">LogIn</button>
     </form>
 </body>
