--- a/blog/app_posts/templates/app_posts/base.html
+++ b/blog/app_posts/templates/app_posts/base.html
@@ -1,5 +1,3 @@
-{% load i18n %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -210,6 +208,8 @@
 
   <body>
 
+  {% load i18n %}
+
     <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
@@ -221,6 +221,23 @@
         </nav>
       </div>
     </div>
+
+     <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+
+        <select name="language">
+             {% get_current_language as LANGUAGE_CODE %}
+             {% get_available_languages as LANGUAGES %}
+             {% get_language_info_list for LANGUAGES as languages %}
+
+             {% for language in languages %}
+                 <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
+                     {{ language.name_local }} ({{ language.code }})
+                 </option>
+             {% endfor %}
+         </select>
+         <input type="submit" value="Go" />
+      </form>
+
 
     <div class="container">
 
