--- a/where_article/article_app/static/article_app/blog.css
+++ b/where_article/article_app/static/article_app/blog.css
@@ -107,6 +107,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 .blog-post {
   margin-bottom: 4rem;
+  word-break: break-all;
 }
 .blog-post-title {
   margin-bottom: .25rem;
