--- a/where_article/article_app/templates/article_app/main_logged.html
+++ b/where_article/article_app/templates/article_app/main_logged.html
@@ -1,7 +1,8 @@
-{% extends "article_app/wrapper.html" %}
+{% extends "article_app/articles.html" %}
 
 {% block header-buttons %}
 <div class="col-4 d-flex justify-content-end align-items-center">
-    <a class="btn btn-sm btn-primary mr-2" href="#">Add article</a>
+    <a class="btn btn-sm btn-primary mr-2" href="/add_article">Add article</a>
+    <a class="btn btn-sm btn-primary mr-2" href="/logout">Log out</a>
 </div>
 {% endblock %}
