add login with Facebook

--- a/where_article/article_app/templates/article_app/login.html
+++ b/where_article/article_app/templates/article_app/login.html
@@ -12,4 +12,7 @@
 
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
+<br>
+<p><strong>-- OR --</strong></p>
+<a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
 {% endblock %}
