--- a/where_article/article_app/templates/article_app/signup.html
+++ b/where_article/article_app/templates/article_app/signup.html
@@ -24,4 +24,7 @@
 
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
 </form>
+<br>
+<p><strong>-- OR --</strong></p>
+<a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
 {% endblock %}
