--- a/where_article/article_app/templates/article_app/articles.html
+++ b/where_article/article_app/templates/article_app/articles.html
@@ -3,7 +3,7 @@
 {% block main %}
     <p>{{ category_selected.description }}</p>
     {% for article in object_list %}
-        {% if article.category.name == category_selected.name %}
+        {% if article.category.name == category_selected.name and article.status %}
             <div class="blog-post">
                 <h2 class="blog-post-title">{{ article.title }}</h2>
                 <p class="blog-post-meta">by {{ article.user.username }}</p>
