--- a/where_article/article_app/templates/article_app/main_staff.html
+++ b/where_article/article_app/templates/article_app/main_staff.html
@@ -2,6 +2,7 @@
 
 {% block header-buttons %}
 <div class="col-4 d-flex justify-content-end align-items-center">
+    <a class="btn btn-sm btn-primary mr-2" href="/review">Review</a>
     <a class="btn btn-sm btn-primary mr-2" href="/add_category">Add category</a>
     <a class="btn btn-sm btn-primary mr-2" href="/logout">Log out</a>
 </div>
