--- a/blog/app_posts/templates/app_posts/base.html
+++ b/blog/app_posts/templates/app_posts/base.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -208,7 +210,7 @@
 
   <body>
 
-  {% load i18n %}
+
 
     <div class="blog-masthead">
       <div class="container">
@@ -222,21 +224,21 @@
       </div>
     </div>
 
-     <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
-
-        <select name="language">
-             {% get_current_language as LANGUAGE_CODE %}
-             {% get_available_languages as LANGUAGES %}
-             {% get_language_info_list for LANGUAGES as languages %}
-
-             {% for language in languages %}
-                 <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
-                     {{ language.name_local }} ({{ language.code }})
-                 </option>
-             {% endfor %}
-         </select>
-         <input type="submit" value="Go" />
-      </form>
+<form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+    <input name="next" type="hidden" value="/" />
+    <select name="language">
+        {% get_current_language as LANGUAGE_CODE12 %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {{LANGUAGE_CODE12}}
+        {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE12 %} selected{% endif %}>
+                {{ language.name_local }} ({{ language.code }})
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="Go" />
+</form>
 
 
     <div class="container">
