--- a/warehouse/parser_app/templates/parser_app/result.html
+++ b/warehouse/parser_app/templates/parser_app/result.html
@@ -5,8 +5,40 @@
     <title>Result</title>
 </head>
 <body>
-    <h2>
-        Hi again! There is your result from <i>Warehouse Parser</i>
-    </h2>
+    {% if object_list|length > 0 %}
+        <h2>
+            Hi again! There is your result from <i>Warehouse Parser</i>
+        </h2>
+
+        <table>
+            <thead>
+                <th>Title</th>
+                <th>Brand</th>
+                <th>Price</th>
+                <th>Sizes</th>
+                <th>Image</th>
+                <th>Description</th>
+            </thead>
+            <tbody>
+                {% for object in object_list %}
+                    <tr>
+                        <td>{{ object.title }}</td>
+                        <td>{{ object.brand }}</td>
+                        <td>{{ object.price }}</td>
+                        <td>{{ object.size }}</td>
+                        <td><img src="{{ object.image }}" style="max-width: 300px;"></td>
+                        <td>{{ object.description }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <h3>Still crawling...</h3>
+        <script>
+            setTimeout(function () {
+                window.location.reload()
+            }, 5000);
+        </script>
+    {% endif %}
 </body>
 </html>
